Fix deprecation